# mysqldump-for-redshift

./: Cargo.toml  README.md
.github/workflows/: ci.yml
bench/: gen-setup.rb  run.sh
src/: main.rs  test_setup.sql
