[package]
name = "mysqldump-for-redshift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aws-config = "0.12"
aws-sdk-s3 = "0.12"
bytes = "1"
chrono = "0.4"
clap = { version = "3", features = ["derive", "env"] }
flate2 = "1"
futures-util = "0.3"
serde_json = "1"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "macros", "mysql", "chrono", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
